# ventus

./: README.md
server/: go.mod  main.go  makefile  server.go
server/bindings/rustlib/: Cargo.toml
server/bindings/rustlib/src/: lib.rs  main.rs
server/merkle/: merkle.go  merkle_test.go  plan  poseidon2.go
server/merkle/shared/: librustlib.dylib
